# releasify

./: .gitignore  LICENSE  README.md  pyproject.toml
src/releasify/: __init__.py  __main__.py  action_handlers.py  auto_parse_str.py  builtin_actions.py  configuration.py  errors.py  kwarg_aliasing.py  parsing.py  pathops.py
